--- a/_posts/2022-08-01-launched.md
+++ b/_posts/2022-08-01-launched.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Hank Quinlan, Horrible Cop, Launches Site"
-date: 2014-04-30
+title: "create closed B-spline line"
+date: 2022-08-01
 ---
 
 Well. Finally got around to putting this old website together. Neat thing abou
